unpackaged/main/default/objects/Direcciones__c/Direcciones__c.object-meta.xml
<CustomObject>
    <label>Dirección</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direcciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>