unpackaged/main/default/objects/Direcciones__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Direcciones</relationshipLabel>
    <relationshipName>Direcciones</relationshipName>
    <type>Lookup</type>
</CustomField>