unpackaged/main/default/objects/Direcciones__c/fields/Calle__c.field-meta.xml
<CustomField>
    <fullName>Calle__c</fullName>
    <label>Calle</label>
    <length>150</length>
    <type>Text</type>
</CustomField>