unpackaged/main/default/objects/Direcciones__c/fields/Calle_y_Numero__c.field-meta.xml
<CustomField>
    <fullName>Calle_y_Numero__c</fullName>
    <formula>Calle__c &amp; &quot; #&quot; &amp; Numero_Exterior__c &amp; &quot; - &quot; &amp; Numero_Interior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calle y Número</label>
    <type>Text</type>
</CustomField>