unpackaged/main/default/objects/Direcciones__c/fields/Cesion_a_Otra_Persona__c.field-meta.xml
<CustomField>
    <fullName>Cesion_a_Otra_Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cesión a Otra Persona</label>
    <referenceTo>Cesion_a_Otra_Persona_Fisica_o_Moral__c</referenceTo>
    <relationshipLabel>Direcciones</relationshipLabel>
    <relationshipName>Direcciones</relationshipName>
    <type>Lookup</type>
</CustomField>