unpackaged/main/default/objects/Direcciones__c/fields/Co_Acreditado__c.field-meta.xml
<CustomField>
    <fullName>Co_Acreditado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co Acreditado</label>
    <referenceTo>Co_Acreditado__c</referenceTo>
    <relationshipLabel>Direcciones</relationshipLabel>
    <relationshipName>Direcciones</relationshipName>
    <type>Lookup</type>
</CustomField>