unpackaged/main/default/objects/Direcciones__c/fields/Codigo_Postal_y_Pais__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal_y_Pais__c</fullName>
    <formula>Codigo_Postal__r.Name &amp; &quot; , &quot; &amp; Pais__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Postal y País</label>
    <type>Text</type>
</CustomField>