unpackaged/main/default/objects/Direcciones__c/fields/Colonia__c.field-meta.xml
<CustomField>
    <fullName>Colonia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colonia</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Colonia__c.Codigo_PostalLookup__c</field>
            <operation>equals</operation>
            <valueField>$Source.Codigo_Postal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Colonia__c</referenceTo>
    <relationshipLabel>Direcciones</relationshipLabel>
    <relationshipName>Direcciones</relationshipName>
    <type>Lookup</type>
</CustomField>