unpackaged/main/default/objects/Direcciones__c/fields/Colonia_Municipio_y_Estado__c.field-meta.xml
<CustomField>
    <fullName>Colonia_Municipio_y_Estado__c</fullName>
    <formula>Colonia__r.Name &amp; &quot; , &quot; &amp; Municipio__r.Name &amp; &quot; , &quot; &amp; Estado__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colonia, Municipio y Estado</label>
    <type>Text</type>
</CustomField>