unpackaged/main/default/objects/Direcciones__c/fields/Dictaminacion__c.field-meta.xml
<CustomField>
    <fullName>Dictaminacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dictaminación</label>
    <referenceTo>Dictaminacion__c</referenceTo>
    <relationshipLabel>Direcciones</relationshipLabel>
    <relationshipName>Direcciones</relationshipName>
    <type>Lookup</type>
</CustomField>