unpackaged/main/default/objects/Direcciones__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <formula>Calle__c &amp; &quot; #&quot; &amp; Numero_Exterior__c &amp; IF(Numero_Interior__c=&quot;&quot;,&quot;&quot;, &quot; - &quot;&amp; Numero_Interior__c)  &amp; &quot;, &quot; &amp; 
Colonia__r.Name &amp; &quot;, &quot; &amp;  Municipio__r.Name &amp; &quot;, &quot; &amp; 
Estado__r.Name &amp; &quot;, &quot; &amp; Codigo_Postal__r.Name &amp; &quot;, &quot; &amp; Pais__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección</label>
    <type>Text</type>
</CustomField>