unpackaged/main/default/objects/Direcciones__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Pais__c</field>
            <operation>equals</operation>
            <valueField>Estado__c.Pais__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Direcciones</relationshipLabel>
    <relationshipName>Direcciones</relationshipName>
    <type>Lookup</type>
</CustomField>