unpackaged/main/default/objects/Direcciones__c/fields/Estatus_Proceso_de_Venta_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Proceso_de_Venta_Oportunidad__c</fullName>
    <formula>Dictaminacion__r.Estatus_Proceso_de_Venta_Oportunidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Proceso de Venta/Dictaminación</label>
    <type>Text</type>
</CustomField>