unpackaged/main/default/objects/Direcciones__c/fields/Folio_Formula__c.field-meta.xml
<CustomField>
    <fullName>Folio_Formula__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Direcciones__c/&quot;&amp; Id &amp;&quot;/view&quot;, Name &amp; &quot; - &quot; &amp; TEXT(Tipo__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Folio</label>
    <type>Text</type>
</CustomField>