unpackaged/main/default/objects/Direcciones__c/fields/Informacion_Representante_Legal__c.field-meta.xml
<CustomField>
    <fullName>Informacion_Representante_Legal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Información Representante Legal</label>
    <referenceTo>Informacion_representante_legal__c</referenceTo>
    <relationshipLabel>Direcciones</relationshipLabel>
    <relationshipName>Direcciones</relationshipName>
    <type>Lookup</type>
</CustomField>