unpackaged/main/default/objects/Direcciones__c/fields/Numero_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Numero_Exterior__c</fullName>
    <label>Número Exterior</label>
    <length>10</length>
    <type>Text</type>
</CustomField>