unpackaged/main/default/objects/Direcciones__c/fields/Perfil_Tercero_Persona_F_sica__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Tercero_Persona_F_sica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Perfil Tercero Persona Física</label>
    <referenceTo>Perfil_Tercero_Fisico__c</referenceTo>
    <relationshipLabel>Direcciones</relationshipLabel>
    <relationshipName>Direcciones</relationshipName>
    <type>Lookup</type>
</CustomField>