unpackaged/main/default/objects/Direcciones__c/fields/Perfil_Tercero_Persona_Moral__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Tercero_Persona_Moral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Perfil Tercero Persona Moral</label>
    <referenceTo>Perfil_Tercero_Moral__c</referenceTo>
    <relationshipLabel>Direcciones</relationshipLabel>
    <relationshipName>Direcciones</relationshipName>
    <type>Lookup</type>
</CustomField>