unpackaged/main/default/objects/Direcciones__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dirección Afluencia</fullName>
            </value>
            <value>
                <fullName>Dirección Principal</fullName>
            </value>
            <value>
                <fullName>Dirección Laboral</fullName>
            </value>
            <value>
                <fullName>Dirección Empresa</fullName>
            </value>
            <value>
                <fullName>Dirección Principal CO Acreditado</fullName>
            </value>
            <value>
                <fullName>Dirección Laboral CO Acreditado</fullName>
            </value>
            <value>
                <fullName>Dirección Rep Legal Laboral</fullName>
            </value>
            <value>
                <fullName>Dirección Rep Legal / Apoderado</fullName>
            </value>
            <value>
                <fullName>Dirección Tercero Persona Física</fullName>
            </value>
            <value>
                <fullName>Dirección Tercero Laboral Persona Física</fullName>
            </value>
            <value>
                <fullName>Direccion_3ro_Moral_Principal</fullName>
                <label>Dirección 3ro Moral Principal</label>
            </value>
            <value>
                <fullName>Direccion_3ro_Domicilio_Moral</fullName>
                <label>Dirección 3ro Domicilio Moral</label>
            </value>
            <value>
                <fullName>Direccion_3ro_Laboral_Moral</fullName>
                <label>Dirección 3ro Laboral Moral</label>
            </value>
            <value>
                <fullName>Dirección Cesión Principal PF</fullName>
            </value>
            <value>
                <fullName>Dirección Cesión Laboral PF</fullName>
            </value>
            <value>
                <fullName>Dirección Cesión Principal PM</fullName>
            </value>
            <value>
                <fullName>Dirección Cesión Laboral PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>