unpackaged/main/default/objects/Direcciones__c/fields/Tipo_de_Direccion_txt__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Direccion_txt__c</fullName>
    <label>Tipo de Dirección</label>
    <length>60</length>
    <type>Text</type>
</CustomField>