unpackaged/main/default/objects/Direcciones__c/validationRules/Valida_modificacion_numero_interior.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_modificacion_numero_interior</fullName>
    <active>true</active>
    <description>No se puede modificar el campo número interior si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado</description>
    <errorConditionFormula>IF( TEXT(Tipo__c) = &quot;Dirección Afluencia&quot;, FALSE,AND(

ISCHANGED(Numero_Interior__c	),
Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Validación&#39;,
Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Reservado&#39;,
Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Formalizado&#39;

))</errorConditionFormula>
    <errorMessage>No se puede modificar el campo número interior si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado</errorMessage>
</ValidationRule>