unpackaged/main/default/objects/Direcciones__c/validationRules/Valida_modificacion_tipo_direccion.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_modificacion_tipo_direccion</fullName>
    <active>true</active>
    <description>No se puede modificar el campo tipo si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado</description>
    <errorConditionFormula>AND(
     ISCHANGED(Tipo__c),
     Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Validación&#39;,
     Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Reservado&#39;,
     Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Formalizado&#39;
   )</errorConditionFormula>
    <errorMessage>No se puede modificar el campo tipo si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado</errorMessage>
</ValidationRule>