unpackaged/main/default/objects/Direcciones__c/validationRules/Valida_Pais_Estatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Pais_Estatus</fullName>
    <active>true</active>
    <errorConditionFormula>IF( TEXT(Tipo__c) = &quot;Dirección Afluencia&quot;, FALSE,AND(

ISCHANGED( Pais__c ),
NOT( Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Validación&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Reservado&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Formalizado&#39;)

))</errorConditionFormula>
    <errorDisplayField>Pais__c</errorDisplayField>
    <errorMessage>No se puede modificar el campo de País si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado</errorMessage>
</ValidationRule>