unpackaged/main/default/objects/Direcciones__c/validationRules/Validacion_modificacion_estado.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_modificacion_estado</fullName>
    <active>true</active>
    <description>No se puede modificar el campo hijos si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado.</description>
    <errorConditionFormula>IF( TEXT(Tipo__c) = &quot;Dirección Afluencia&quot;, FALSE,
AND(

ISCHANGED(Estado__c),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Validación&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Reservado&#39;),
NOT(Estatus_Proceso_de_Venta_Oportunidad__c == &#39;Formalizado&#39;)

))</errorConditionFormula>
    <errorMessage>No se puede modificar el campo estado si el estatus del proceso de venta es de la oportunidad es diferente a Validación, Reservado, Formalizado</errorMessage>
</ValidationRule>