unpackaged/main/default/objects/Direcciones__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Pais__c</columns>
    <columns>Municipio__c</columns>
    <columns>Estado__c</columns>
    <columns>Codigo_Postal__c</columns>
    <columns>Colonia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>